<resources>
    <string name="app_name">IT interview trainer</string>
    <string name="btn_take_test_text">Take a test</string>
    <string name="btn_categories_text">Categories</string>
    <string name="btn_stat_text">Statistics</string>
    <string name="test_setup_title">Setup test</string>
    <string name="test_setup_categories">Select categories</string>
    <string name="test_questions_amount">Questions amount</string>
    <string name="test_select_timer">Setup timer</string>
    <string name="test_select_level">Select level</string>
    <string name="search_category">Search categories</string>
    <string name="start_test">Start test</string>
    <string name="categories_title">Categories</string>
    <string name="search_category_title">Search categories</string>
    <string name="level_easy">Easy</string>
    <string name="level_medium">Medium</string>
    <string name="level_hard">Hard</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>