<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintWidth_default="wrap"
        app:layout_constraintHeight_percent="0.35"
        app:layout_constraintHeight_default="wrap"
        app:layout_constraintVertical_weight="0.5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttons"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:src="@drawable/logo" />

    <LinearLayout
        android:id="@+id/buttons"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintWidth_default="wrap"
        app:layout_constraintHeight_default="wrap"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_bias="0.8"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/startTestBtn"
            android:textSize="25sp"
            android:text="@string/btn_take_test_text"
            android:layout_marginVertical="10dp"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/categoriesBtn"
            android:textSize="25sp"
            android:layout_marginVertical="10dp"
            android:padding="10dp"
            android:text="@string/btn_categories_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/statsBtn"
            android:textSize="25sp"
            android:layout_marginVertical="10dp"
            android:padding="10dp"
            android:text="@string/btn_stat_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>