<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/buttons"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintWidth_default="wrap"
        app:layout_constraintHeight_default="wrap"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginVertical="25dp"
        app:layout_constraintRight_toRightOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/testSetupTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_setup_title"
            android:textSize="25sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/selectCategoriesLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/test_setup_categories"
            app:endIconMode="none">

            <AutoCompleteTextView
                android:id="@+id/selectCategories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:clickable="true"
                android:focusable="false"
                android:labelFor="@+id/selectCategories" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/selectLevelLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/test_select_level"
            app:endIconMode="none"
            app:layout_constraintLeft_toLeftOf="parent"
            >

            <AutoCompleteTextView
                android:id="@+id/selectLevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:clickable="true"
                android:focusable="false"
                android:labelFor="@+id/selectLevel" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/selectQAmountLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_gravity="center"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/selectQAmount"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="Amount:"/>

            <com.google.android.material.slider.Slider
                android:id="@+id/selectQAmount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_weight="4"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@id/selectQAmountLabel"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="30dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/selectTimerLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_gravity="center"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/selectTimer"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="Timer:"/>

            <com.google.android.material.slider.Slider
                android:id="@+id/selectTimer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_weight="4"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@id/selectTimerLabel"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/startTest"
            android:textSize="25sp"
            android:text="@string/start_test"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/selectLevelLayout"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>